💎 fix task title overflow

--- a/src/modules/calender/css/TodoGroup.css
+++ b/src/modules/calender/css/TodoGroup.css
@@ -7,7 +7,7 @@
 }
 
 .todogroup-title {
-  height: 5vh;
+  min-height: 5vh;
   margin-top: 1vh;
   display: flex;
   flex-direction: row;
@@ -19,6 +19,7 @@
   text-align: center;
   vertical-align: middle;
   color: #1c1c1c;
+  word-break: break-all;
 }
 
 .todogroup-input-name {
@@ -77,6 +78,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 5px;
+  word-break: break-all;
 }
 
 .todogroup-option {
